--- a/AudioRecorder/AndroidManifest.xml
+++ b/AudioRecorder/AndroidManifest.xml
@@ -7,39 +7,42 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
 
+    <!-- Any embedding application will need the following permission -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:icon="@drawable/android_mic"
         android:label="@string/in.uncode.android.audiorecorder.app_name"
         android:theme="@style/AppTheme" >
+
+        <!-- Copy this activity to your application's manifest to embed the recorder -->
+        <!-- Uncodin Audio Recorder -->
+        <activity
+            android:name="in.uncod.android.audiorecorder.AudioRecorderActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:icon="@drawable/android_mic"
+            android:label="@string/in.uncode.android.audiorecorder.app_name"
+            android:taskAffinity="" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.GET_CONTENT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+
+                <data android:mimeType="audio/amr" />
+                <data android:mimeType="audio/3gpp" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.provider.MediaStore.RECORD_SOUND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
-
-    <!--  Copy this activity to your application's manifest to embed the recorder -->
-    <!-- Uncodin Audio Recorder -->
-    <activity
-        android:name="in.uncod.android.audiorecorder.AudioRecorderActivity"
-        android:configChanges="orientation|keyboardHidden|screenSize"
-        android:icon="@drawable/android_mic"
-        android:label="@string/in.uncode.android.audiorecorder.app_name"
-        android:taskAffinity="" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        <intent-filter>
-            <action android:name="android.intent.action.GET_CONTENT" />
-
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.OPENABLE" />
-
-            <data android:mimeType="audio/amr" />
-            <data android:mimeType="audio/3gpp" />
-        </intent-filter>
-        <intent-filter>
-            <action android:name="android.provider.MediaStore.RECORD_SOUND" />
-
-            <category android:name="android.intent.category.DEFAULT" />
-        </intent-filter>
-    </activity>
 
 </manifest>
