--- a/AudioRecorder/AndroidManifest.xml
+++ b/AudioRecorder/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:icon="@drawable/android_mic"
-        android:label="@string/in.uncode.android.audiorecorder.app_name"
+        android:label="@string/in.uncod.android.audiorecorder.app_name"
         android:theme="@style/AppTheme" >
 
         <!-- Copy this activity to your application's manifest to embed the recorder -->
@@ -21,7 +21,7 @@
             android:name="in.uncod.android.audiorecorder.AudioRecorderActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:icon="@drawable/android_mic"
-            android:label="@string/in.uncode.android.audiorecorder.app_name"
+            android:label="@string/in.uncod.android.audiorecorder.app_name"
             android:taskAffinity="" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
