Add ActionBarSherlock as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Android-Common"]
 	path = Android-Common
 	url = git@github.com:Uncodin/Android-Common.git
+[submodule "ActionBarSherlock"]
+	path = ActionBarSherlock
+	url = git://github.com/JakeWharton/ActionBarSherlock.git
