--- a/AudioRecorder/project.properties
+++ b/AudioRecorder/project.properties
@@ -1,5 +1,5 @@
-android.library=true
+android.library=false
 # Project target.
-target=android-16
+target=android-15
 android.library.reference.1=../ActionBarSherlock/library
 android.library.reference.2=../Android-Common/UncodinCommon
