--- a/AudioRecorder/project.properties
+++ b/AudioRecorder/project.properties
@@ -1,5 +1,7 @@
 android.library=false
 # Project target.
 target=android-15
-android.library.reference.1=../ActionBarSherlock/library
-android.library.reference.2=../Android-Common/UncodinCommon
+android.library.reference.1=..\\ActionBarSherlock\\library
+android.library.reference.2=..\\Android-Common\\UncodinCommon
+android.library.reference.3=../../ActionBarSherlock/library
+android.library.reference.4=../../Android-Common/UncodinCommon
